[package]
name = "aur-trust"
description = "Track trusted AUR packages"
version = "0.1.0"
homepage = "https://github.com/lunaryorn/aur-trust"
repository = "https://github.com/lunaryorn/aur-trust"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
