[package]
name = "aur-trust"
description = "Track trusted AUR packages"
version = "0.1.0"
homepage = "https://github.com/swsnr/aur-trust"
repository = "https://github.com/swsnr/aur-trust"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0.37", default-features = false }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"] }
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.89", default-features = false, features = ["std"] }
tokio = { version = "1.22.0", default-features = false, features = ["rt", "macros"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls-manual-roots", "json"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
futures-test = "0.3.25"
tokio = { version = "1.22.0", default-features = false, features = ["test-util"] }
